<resources>
    <string name="app_name">FirstAppBasicActivityAPI22</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_address_hint">Your email address</string>
    <string name="your_password_hint">Your password</string>
    <string name="button_label">Submit</string>
    <string name="message_text">email: %s, password: %s</string>
    <string name="switch_label">Display olive branch</string>

    <string name="enter_label">Enter</string>
    <string name="share_label">Share</string>
    <string name="fab">Email</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_first">First</string>
    <string name="bottom_navigation_second">Second</string>

    <string name="choose_stock_label">Choose stock below</string>
    <string name="firm_1_btn_label">IRMN</string>
    <string name="firm_2_btn_label">BTMN</string>
    <string name="firm_3_btn_label">ZMBI</string>
    <string name="stock_info">Open: %.2f\n\nClose: %.2f\n\nChange: (%.2f)</string>
</resources>